# spy

./: .gitignore  42.0  README.md  comp.py  conf.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: python-package.yml
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/docs/: modules.doctree  spy.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_modules/: index.html
_build/html/_modules/spy/: error.html  fits.html  fitsarray.html  models.html  utils.html
_build/html/_sources/: index.rst  index.rst.txt
_build/html/_sources/docs/: modules.rst  modules.rst.txt  spy.rst
_build/html/_static/: documentation_options.js
_build/html/docs/: modules.html  spy.html
_build/latex/: spy.aux  spy.fdb_latexmk  spy.fls  spy.ilg  spy.tex
docs/: spy.dia  spy.rst
src/spy/: error.py  fits.py  fitsarray.py  models.py  utils.py
tests/: test_fits.py  test_fits_array.py
