[metadata]
name = spy
description =  Simpler PYraf
author = Mohammad S.Niaei
license = GNU/GPL V3
license_files = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    spy
install_requires =
    astroalign
    astropy
    ccdproc
    matplotlib
    mpl_point_clicker
    numpy
    pandas
    photutils
    python_dateutil
    sep
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
spy =
    py.typed
    sample.fits

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401